--- a/src/components/XP.scss
+++ b/src/components/XP.scss
@@ -8,14 +8,20 @@
   background-color: $projectsColor;
   transform: translateY(150vh);
   gap: 1rem;
-  height: 300vh;
+  height: 350vh;
+  z-index: 0;
+  &__title{
+  position: relative;
+  top: 20rem;
+  transform: translateX(100px);
+  font-size: 6rem;
+  opacity: 0;
+  font-family: finder_thin;
 
-  .test{
-    position: relative;
-    width: 80%;
-    height: 80vh;
-    border: 3px solid black;
-    transform: translateY(60vh)  scale(.3);
-    opacity: 0;
+  &:hover{
+    text-decoration: line-through;
   }
+
+  }
+  
 }
