--- a/src/components/projetCard.scss
+++ b/src/components/projetCard.scss
@@ -9,42 +9,48 @@
   min-height: 50vh;
   height: auto;
   margin: 1rem 0;
-  transform: translateY(50px);
-  border: 1px solid black;
+  transform: translateY(100px);
+  background-color:rgb(242, 255, 226);
+
+  border-radius: 1rem;
   opacity: 0;
-  &__id{
+  font-family: $fontText;
+  // &__id{
+  //   position: absolute;
+  //   top: -10px;
+  //   left: -10px;
+  //   padding: .2rem .5rem;
+  //   background-color: $projectsColor;
+  // }
+  &__sparkle{
     position: absolute;
-    top: -10px;
-    left: -10px;
-    padding: .2rem .5rem;
-    background-color: $projectsColor;
+    width: 20vh;
+    height: auto;
+    top: -10%;
+    right: 0;
   }
   a{
     position: relative;
     padding: .5rem;
-    &:hover h4{
       opacity: 1;
-      color: black;
+      color: rgb(79, 79, 79);
       z-index: 10;
-    }
-    &:hover img{
-      opacity: .7;
-    }
   }
   h4{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+   position: relative;
+   text-align: center;
     font-size: 3rem;
-    opacity: 0;
+    opacity: 1;
+    font-family: $font_header_thin;
   }
  
-  img{
+  &__img{
     width: 100%;
     height: auto;
     object-fit: contain;
     opacity: 1;
+    border-radius: .5rem;
+    margin: 1rem 0 0 0 ;
   }
   p{
     position: relative;
@@ -61,8 +67,10 @@
       font-size: .8rem;
       margin: .5rem ;
       padding: .3rem;
-      border: 1px solid rgb(90, 90, 90);
-      border-radius: 3px;
+      border: 1px solid rgb(200, 200, 200);
+      border-radius: 5px;
+      background-color: $projectsColorDark;
+      font-family: $font_title_project;
     }
   }
  
