--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -28,3 +28,12 @@
   }
 }
 
+@media all and (min-width:650px) {
+  .contact__ul__li{
+    font-size: 4.5rem;
+    a{
+      font-size: 4.5rem;
+  
+    }
+  }
+}
