--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@
 $main_text: rgb(20, 19, 19);
 $white: #FFFFFF;
 $header__bg:#faebd7;
-$wild-code-school-color : #F76A6A;
+$wildCodeSchoolColor : #F76A6A;
 $projectsColor :#d0f1f1;
 $projectsColorDark :#d0e3e397;
 $workColor:#ffd8e3;
