--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -20,9 +20,28 @@
     transform: translateY(50px);
     font-family: finder_thin;
     text-transform: uppercase;
+  }
+}
 
-    &:hover{
-      text-decoration: line-through;
+@media all and (min-width : 650px) {
+  .projects{
+    &__title{
+      margin-bottom: 2rem;
+      font-size: 9rem;
+    }
+    &__card__container{
+      position: relative;
+      width: 100%;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      gap: 5%;
     }
   }
+}
+@media all and (min-width: 800px) {
+  .projects__title{
+    font-size: 12rem;
+  }
+  
 }
