--- a/src/components/projetCard.scss
+++ b/src/components/projetCard.scss
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   width: 98vw;
   min-height: 50vh;
@@ -15,13 +15,6 @@
   border-radius: 1rem;
   opacity: 0;
   font-family: $fontText;
-  // &__id{
-  //   position: absolute;
-  //   top: -10px;
-  //   left: -10px;
-  //   padding: .2rem .5rem;
-  //   background-color: $projectsColor;
-  // }
   &__sparkle{
     position: absolute;
     width: 20vh;
@@ -74,4 +67,30 @@
     }
   }
  
+}
+
+@media all and (min-width : 650px){
+  .projetCard{
+    width: 40vw;
+    h4{
+      font-size: 4rem;
+
+      
+    }
+    &__sparkle{
+      right: -20%;
+    }
+  }
+
+}
+
+@media all and (min-width: 1000px) {
+ .projetCard{
+  &__sparkle{
+    right: -10%;
+  }
+   p{
+     font-size: 1.3rem;
+   }
+ } 
 }
