always something to fix

--- a/src/components/XPCard.scss
+++ b/src/components/XPCard.scss
@@ -9,7 +9,7 @@
   min-height: 80vh;
   height: auto;
   border-radius: 1rem;
-  background-color: #AE69EE;
+  background-color: $purple;
   color: white;
   display: flex;
   flex-direction: column;
