--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,8 @@ $font_header_thin : finderThin;
 $font_size_sections_header : 8rem;
 $black :rgb(32, 32, 32);
 $white: rgb(209, 209, 209);
+$purple: #AE69EE;
+$green:rgb(242, 255, 226);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
