--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -3,6 +3,7 @@
   position: relative;
   transform: translateY(130vh);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -17,14 +18,24 @@
     justify-content: center;
     align-items: center;
     &__li{
-      font-size: 3.5rem;
+      font-size: 3rem;
       color: rgb(205, 205, 205);
 
     }
-    a{
-      font-size: 2rem;
-      color: rgb(205, 205, 205);
-    }
+  }
+  a, span{
+    font-size: 3rem;
+    color: rgb(205, 205, 205);
+  }
+  a:hover{
+    cursor: pointer;
+  }
+  &__socials{
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    width: 80vw;
+    margin-top: 5%;
   }
 }
 
