always something to fix

--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -42,7 +42,7 @@
 @media all and (min-width:650px) {
   .contact__ul__li{
     font-size: 4.5rem;
-    a{
+    a, span{
       font-size: 4.5rem;
   
     }
