--- a/src/components/XPCard.scss
+++ b/src/components/XPCard.scss
@@ -103,7 +103,27 @@
     transform: translateY(60vh)  scale(1);
     opacity: 0;
     overflow-y: scroll;
+    
    
+  }
+}
+@media all and (min-width: 1800px) {
+  .xpCard{
+    width: 30vw;
+    min-height: 60vh;
+    height: 60vh;
+    &__title{
+      font-size: 5rem;
+    }
+   &__pills{
+     font-size: 2.5rem;
+   }
+ &__description{
+   font-size: 1.8rem;
+ }
+ &__skills{
+   font-size: 1.8rem;
+ }
   }
 }
 
