--- a/style.scss
+++ b/style.scss
@@ -2,19 +2,19 @@
 
 @font-face {
   font-family: 'fontText';
-  src: url('src/assets/fonts/Poppins-Light.TTF');
+  src: url('./src/assets/fonts/Poppins-Light.TTF');
 }
 @font-face {
   font-family: 'textMedium';
-  src: url('src/assets/fonts/Poppins-Regular.TTF');
+  src: url('./src/assets/fonts/Poppins-Regular.TTF');
 }
 @font-face {
   font-family: 'title';
-  src: url('src/assets/fonts/Wayfinder CF Bold.OTF');
+  src: url('./src/assets/fonts/Wayfinder CF Bold.OTF');
 }
 @font-face {
   font-family: 'finderThin';
-  src: url('src/assets/fonts/Wayfinder CF Thin.OTF');
+  src: url('./src/assets/fonts/Wayfinder CF Thin.OTF');
 }
 
 
