--- a/src/header.scss
+++ b/src/header.scss
@@ -20,7 +20,7 @@
   width: 100%;
   height: 9.2rem;
   font-size:9rem;
-  font-family: $font_header_title;
+  font-family: title;
   overflow: hidden;
   // border: 1px solid black;
   &__letter{
