imported fonts with mark

--- a/style.scss
+++ b/style.scss
@@ -1,19 +1,19 @@
 
 @font-face {
   font-family: 'fontText';
-  src: url('./src/assets/fonts/Poppins-Light.TTF');
+  src: url('src/assets/fonts/Poppins-Light.TTF');
 }
 @font-face {
   font-family: 'textMedium';
-  src: url('./src/assets/fonts/Poppins-Regular.TTF');
+  src: url('src/assets/fonts/Poppins-Regular.TTF');
 }
 @font-face {
-  font-family: 'title';
-  src: url('./src/assets/fonts/Wayfinder CF Bold.OTF');
+  font-family: 'wayfinder-CF, serif';
+  src: 'https://use.typekit.net/tgu1yzm.css';
 }
 @font-face {
   font-family: 'finderThin';
-  src: url('./src/assets/fonts/Wayfinder CF Thin.OTF');
+  src: url('src/assets/fonts/Wayfinder CF Thin.OTF');
 }
 
 
@@ -27,7 +27,7 @@ $projectsColorDark :#d0e3e397;
 $workColor:#ffd8e3;
 $fontText : fontText;
 $font_title_project: textMedium;
-$font_header_title : title;
+$font_header_title : wayfinder-CF;
 $font_header_thin : finderThin;
 $font_size_sections_header : 8rem;
 $black :rgb(32, 32, 32);
