modified size of pictures

--- a/src/components/CallMe.scss
+++ b/src/components/CallMe.scss
@@ -10,7 +10,8 @@
   &__title{
     position: relative;
     border:1px solid white;
-    font-family: $font_header_title;
+    font-family: $font_header;
+    font-weight: 700;
     color: rgb(233, 233, 233);
     border-radius: 200vw;
     font-size: 17vw;
