--- a/src/components/contact.scss
+++ b/src/components/contact.scss
@@ -8,7 +8,8 @@
   align-items: center;
   height: 100vh;
   background-color: $black;
-  font-family: $font_header_thin;
+  font-family: $font_header;
+  font-weight: $font_weight_header_thin;
   margin-top: 40vh;
 
   &__ul{
