--- a/src/components/projetCard.scss
+++ b/src/components/projetCard.scss
@@ -14,6 +14,7 @@
   border-radius: 1rem;
   opacity: 0;
   font-family: $fontText;
+  font-weight: 100;
   &__sparkle{
     position: absolute;
     width: 20vh;
@@ -33,7 +34,8 @@
    text-align: center;
     font-size: 3rem;
     opacity: 1;
-    font-family: $font_header_thin;
+    font-family: $font_header;
+    font-weight: $font_weight_header_thin;
     color: $black;
   }
  
@@ -63,7 +65,7 @@
       border: 1px solid rgb(200, 200, 200);
       border-radius: 5px;
       background-color: $projectsColorDark;
-      font-family: $font_title_project;
+      font-family: $fontText;
     }
   }
  
