--- a/src/header.scss
+++ b/src/header.scss
@@ -20,7 +20,8 @@
   width: 100%;
   height: 9.2rem;
   font-size:9rem;
-  font-family: $font_header_title;
+  font-family: $font_header;
+  font-weight: $font_weight_header;
   overflow: hidden;
   // border: 1px solid black;
   &__letter{
@@ -35,7 +36,8 @@
     top: 50px;
     padding: .5rem;
     font-size: 3rem;
-    font-family: finder_thin ;
+    font-family: $font_header ;
+    font-weight: $font_weight_header_thin;
     color: $main_text;
     opacity: 0;
     height: auto;
@@ -74,7 +76,7 @@
   .header{
     padding: 1rem 2rem;
     &__title{
-      height: 16rem;
+      height: 15rem;
       font-size:14rem;
       &__letter{
         display: inline-block;
@@ -85,7 +87,7 @@
     }
     &__description{
       position: relative;
-      top:1rem;
+      top:1.5rem;
       font-size: 3.4rem;
       width: 70%;
       align-self: flex-start;
