--- a/src/components/XP.scss
+++ b/src/components/XP.scss
@@ -16,7 +16,8 @@
   transform: translateX(100px);
   font-size: 6rem;
   opacity: 0;
-  font-family: finder_thin;
+  font-family: $font_header;
+  font-weight: $font_weight_header_thin;
   }
   
 }
