--- a/style.scss
+++ b/style.scss
@@ -52,6 +52,9 @@ time, mark, audio, video {
 a{
   color: black;
   text-decoration: none;
+  &:hover{
+    cursor:pointer;
+  }
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
