overflow hidden on XP cards

--- a/src/components/XPCard.scss
+++ b/src/components/XPCard.scss
@@ -103,7 +103,7 @@
     height: 70vh;
     transform: translateY(60vh)  scale(1);
     opacity: 0;
-    overflow-y: scroll;
+    overflow-y: hidden;
     
    
   }
