--- a/style.scss
+++ b/style.scss
@@ -63,6 +63,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    overflow-x: hidden !important;
 }
 ol, ul {
 	list-style: none;
