--- a/src/components/hobbies.scss
+++ b/src/components/hobbies.scss
@@ -8,6 +8,8 @@
   flex-wrap: nowrap;
   height: 100vh;
   box-sizing: border-box;
+  overflow-x: hidden;
+
 
   &__panel{
     position: relative;
@@ -89,6 +91,9 @@
     }
   }
 
+}
+.pin-spacer{
+  pointer-events: none;
 }
 
 @media all and (min-width:650px) {
