alternance is clickable and linkedIn is target _blank

--- a/src/header.scss
+++ b/src/header.scss
@@ -49,6 +49,8 @@
     &-alternance{
       position: relative;
       display: inline-block;
+      pointer-events: all;
+
 
     }
    &-alternance::before{
